<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/billing_address_relative_layout">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_billing_info_page_rel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/profile_billing_info_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billing_info"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/profile_billing_info_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_billing_info_title_textview">

        <LinearLayout
            android:id="@+id/profile_billing_info_page_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:id="@+id/profie_billing_names_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:id="@+id/profile_billing_first_name_lin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">


                        <EditText
                            android:id="@+id/profile_billing_first_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_first_name"
                            android:enabled="false"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profile_billing_last_name_lin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">



                        <EditText
                            android:id="@+id/profile_billing_last_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_last_name"
                            android:enabled="false"/>

                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_street_address1_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_street_address1_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address1"
                        android:layout_weight="1"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_street_address2_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_street_address2_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address2"
                        android:layout_weight="1"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_city_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/profile_billing_city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_city_town"
                        android:layout_weight="1"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_state_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_state_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_state_province"
                        android:layout_weight="1"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_country_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_country_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_country"
                        android:layout_weight="1"
                        android:enabled="false" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_billing_zipcode_lin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/profile_billing_zipcode_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="5"
                        android:hint="@string/profile_zip_code"
                        android:layout_weight="1"
                        android:enabled="false"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/profile_billing_change_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_confirm_change"
                android:textColor="@color/white"
                android:background="@color/confirmButton"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/profile_billing_info_edit_rel_layout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/profile_billing_info_edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_green_24dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>