...
                        android:orientation="vertical"
                        android:layout_weight="1">



                        <EditText
                            android:id="@+id/profile_shipping_first_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_first_name"
                            android:enabled="false"/>

                    </LinearLayout>
...
                        android:orientation="vertical"
                        android:layout_weight="1">



                        <EditText
                            android:id="@+id/profile_shipping_last_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_last_name"
                            android:enabled="false"/>

                    </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_shipping_street_address1_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address1"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_shipping_street_address2_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address2"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_shipping_city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_city_town"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_shipping_state_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_state_province"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_shipping_country_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_country"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">


                    <EditText
                        android:id="@+id/profile_shipping_zipcode_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_zip_code"
                        android:inputType="number"
                        android:maxLength="5"
                        android:layout_weight="1"
...

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/profile_shipping_change_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_confirm_change"
                android:textColor="@color/white"
                android:background="@color/confirmButton"
                android:visibility="gone"/>
...
        android:id="@+id/profile_shipping_info_edit_rel_layout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/profile_shipping_info_edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_green_24dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
...
